# projectmonolith

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  data.db  health_check.py  main.py  phases.md  phases_ai_convergence.md  pyproject.toml  railway.json  readme.md  requirements-dev.txt  requirements.txt  run_admin_bot.py  run_ai_bot.py  run_crypto_bot.py  run_group_bot.py  run_migrations.py  run_production.py  run_support_bot.py  security_check.py
.github/workflows/: ci.yml
admin_bot/: admin_app.py  handlers.py
alembic/: env.py
alembic/versions/: 95c30b455564_initial_schema.py  a1d98c48e4aa_add_referral_and_feedback_tables.py  b2b6b2cfe76e_drop_groq_api_key_column.py  b7c1b7afc41a_sync_models.py  c8d2c8bfd52b_add_groq_api_key_and_raid_columns.py  d9e3d9cfe63c_add_selected_model_to_usage.py  e9f3e9cfe63d_add_composite_indexes.py  f1a4f1aef64e_add_tokens_used_to_usage.py  f2a5f2aef65e_add_rate_limits_table_and_fix_index.py
bot/: status.py  telegram_app.py
core/: animation.py  config.py  formatters.py  logger.py  sources.py  task_manager.py  validators.py
database/: db.py  init_db.py  models.py
delivery/: broadcaster.py  channel_broadcaster.py
docker/: .dockerignore  Dockerfile  railway.json
docs/: security.md
group_bot/: filters.py  group_app.py  violation_tracker.py
pipeline/: ingest_pipeline.py  message_formatter.py
scraper/: date_extractor.py  makaut_scraper.py  pdf_processor.py
scratch/: clean_mobile_dividers.py  clean_mobile_ui.py
scripts/: check_security.py  health_monitor.py  start_admin.py  start_ai.py  start_crypto.py  start_group.py  start_support.py
search_bot/: handlers.py  search_app.py
src/: append_group_repo.py  cleanup_admin.py  cleanup_ai_backend.py  cleanup_final.py  cleanup_ui.py  drop_tables.py  gateway.py  rename_repos.py  run_admin_bot.py  run_ai_bot.py  run_crypto_bot.py  run_group_bot.py  run_support_bot.py  security_check.py
src/core/: __init__.py  animation.py  cache.py  circuit_breaker.py  config.py  data_cleanup.py  database.py  db_health.py  engagement_handlers.py  error_handler.py  formatters.py  gateway.py  llm_fallback.py  llm_helpers.py  logger.py  metrics.py  permissions.py  rate_limit_models.py  rate_limit_repo.py  rate_limiter.py  secrets.py  subscription.py  task_manager.py  tier_limits.py  ui_components.py  validators.py  webhook_router.py
src/utils/: __init__.py  hash_util.py  time_util.py
src/zenith_admin_bot/: __init__.py  commands.py  common.py  dashboard.py  models.py  monitoring.py  repository.py  ui.py
src/zenith_ai_bot/: __init__.py  llm_engine.py  models.py  pro_handlers.py  prompts.py  repository.py  search.py  ui.py  utils.py  youtube.py
src/zenith_crypto_bot/: __init__.py  ai_engine.py  ai_handlers.py  market_service.py  models.py  pnl_card.py  pro_handlers.py  repository.py  smart_money.py  ui.py
src/zenith_group_bot/: __init__.py  ai_group_handlers.py  crypto_group_handlers.py  filters.py  flood_control.py  gamification.py  group_app.py  models.py  pro_handlers.py  repository.py  setup_flow.py  ui.py  word_list.py
src/zenith_support_bot/: __init__.py  ai_responder.py  models.py  notifications.py  pro_handlers.py  repository.py  scheduler.py  ui.py  user_handlers.py
tests/: conftest.py  test_engagement.py  test_formatters.py  test_market_service.py  test_validators.py
tests/test_e2e/: test_admin_bot.py  test_ai_bot.py  test_crypto_bot.py  test_group_bot.py  test_support_bot.py
tests/test_health/: test_health_check.py
tests/test_smoke/: test_config.py  test_database.py  test_gateway.py  test_imports.py  test_time_util.py
utils/: system_flags.py  time_util.py
zenith_admin_bot/: models.py  monitoring.py  repository.py
zenith_ai_bot/: llm_engine.py  pro_handlers.py  prompts.py  search.py  ui.py  utils.py  youtube.py
zenith_crypto_bot/: models.py  pro_handlers.py  repository.py  ui.py
zenith_group_bot/: filters.py  group_app.py  models.py  pro_handlers.py  repository.py  setup_flow.py  ui.py
zenith_support_bot/: __init__.py  ai_responder.py  models.py  notifications.py  pro_handlers.py  repository.py  ui.py  user_handlers.py
